--- a/client/src/pages/add/add.scss
+++ b/client/src/pages/add/add.scss
@@ -53,6 +53,22 @@
                     padding: 12.5px;
                 }
 
+                .images {
+                    display: flex;
+                    align-items: center;
+                    gap: 20px;
+
+                    .imagesInput {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 20px;
+                    }
+
+                    button {
+
+                    }
+                }
+
                 button {
                     border: none;
                     padding: 20px;
@@ -61,6 +77,34 @@
                     font-weight: 500;
                     font-size: 18px;
                     cursor: pointer;
+                }
+
+                .add {
+                    display: flex;
+                    justify-content: space-between;
+
+                    input {
+                        width: 100%;
+                    }
+                }
+
+                .addedFeatures {
+                    display: flex;
+                    gap: 20px;
+
+                    button {
+                        height: 30px;
+                        font-size: 12px;
+                        font-weight: 400;
+                        background-color: transparent;
+                        color: lightcoral;
+                        border: 1px solid lightcoral;
+                        border-radius: 10px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        gap: 20px;
+                    }
                 }
             }
         }
