--- a/client/src/pages/message/message.scss
+++ b/client/src/pages/message/message.scss
@@ -18,6 +18,7 @@
             padding: 50px;
             display: flex;
             flex-direction: column;
+            justify-content: flex-start;
             gap: 25px;
             height: 500px;
             overflow: scroll;
